# template-cpp-lib-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/: CMakeLists.txt
libs/Mylib/: CMakeLists.txt
libs/Mylib/api/: mylib.hpp
libs/Mylib/include/: mylib.hpp  mylib_prv.hpp
libs/Mylib/source/: mylib.cpp  mylib_prv.cpp
libs/Mylib/test/: CMakeLists.txt  mylib_test.cpp
source/: main.cpp
